# discovery-feeds

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_server.bat
.github/workflows/: ci.yml
data/: articles.csv
notebooks/: exploration.ipynb
scripts/: build_index.py  run_api.py
src/: api.py  data_loader.py  embeddings.py  ranking.py  recommender.py  retrieval.py  vector_index.py
tests/: test_embeddings.py  test_ranking.py  test_vector_index.py
